--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 certifi==2018.10.15
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.1.2
 django-cors-headers==2.4.0
 django-filter==2.0.0
+django-heroku==0.3.1
 djangorestframework==3.9.0
 drfdocs==0.0.11
+gunicorn==19.9.0
 idna==2.7
 jet==1.0
 Markdown==3.0.1
+psycopg2==2.7.5
 pytz==2018.6
 requests==2.20.0
 urllib3==1.24
+whitenoise==4.1
