--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ gunicorn==19.9.0
 idna==2.7
 jet==1.0
 Markdown==3.0.1
+nltk==3.3
 psycopg2==2.7.5
 pytz==2018.6
 requests==2.20.0
+six==1.11.0
 urllib3==1.24
 whitenoise==4.1
